--- a/Twitter_oM/Twitter_oM.csproj
+++ b/Twitter_oM/Twitter_oM.csproj
@@ -7,7 +7,7 @@
     <ProjectGuid>{44DD8766-3BEF-49D2-9289-1487F2E8D5CD}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Twitter_oM</RootNamespace>
+    <RootNamespace>BH.oM.Adapters.Twitter</RootNamespace>
     <AssemblyName>Twitter_oM</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
@@ -60,7 +60,7 @@
   </ItemGroup>
   <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
-    <PropertyGroup>
+  <PropertyGroup>
     <PostBuildEvent>
 xcopy "$(TargetDir)$(TargetFileName)"  "C:\ProgramData\BHoM\Assemblies" /Y
 xcopy "$(TargetDir)Newtonsoft.Json.dll"  "C:\ProgramData\BHoM\Assemblies" /Y
